# ProstateMRIAnnotator

./: CMakeLists.txt  ProstateMRIAnnotator.py
MRIAnnotator/: CMakeLists.txt  MRIAnnotator.py
MRIAnnotator/Resources/UI/: MRIAnnotator.ui
